# realtime-histogram-equalization

./: .cproject  .project  CMakeLists.txt  Makefile  README.md  Real time histogram equalization.md  out
include/: Histogram.hpp  HistogramCPU.hpp  HistogramFactory.hpp  HistogramGPU.hpp  histoEqCuda.cuh
src/: HistogramCPU.cpp  HistogramFactory.cpp  HistogramGPU.cu  histoEqCpu.h  histoEqCuda.cu  histoEqCuda.h  main.cpp  main.cu
